fixed some alignment issues https://app.asana.com/0/84113659891061/94393680990025

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -49,11 +49,9 @@ html, body {
 /* padded section */
 .pad-section {
 	padding: 50px 0;
-}
-
-.pad-section img {
 	width: 100%;
 }
+
 
 /* vertical-centered text */
 .text-vcenter {
@@ -83,12 +81,13 @@ html, body {
 }
 
 #about {
-	text-align: center;
+
 }
 
 #services {
 	background-color: olivedrab;
 	color: white;
+	width: 100%;
 }
 #services .glyphicon {
 	border: 2px solid white;
@@ -136,4 +135,22 @@ header {
 
 body {
 	background: darkolivegreen;
+}
+
+
+.text-vcenter {
+	height: 700px;
+}
+
+#about {
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.container {
+	width: 100%;
+}
+
+.row-2 {
+	text-align: center;
 }
